--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-<html>
-<title>
-first
-</title>
-<body>
-<h1>hello world</h1>
+<html ng-app="ngDynamicForms">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+
+<script type='text/javascript'
+	src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.1/angular.js'></script>
+<script type='text/javascript'
+
+	src='placementseason.js'>
+</script>
+<body ng-controller="FormBuilderCtrl" >
+<div ng-dynamic-form />
 </body>
 </html>
